--- a/res/layout/personal_data.xml
+++ b/res/layout/personal_data.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200pt"
+    android:layout_width="400dp"
     android:layout_height="wrap_content"
     android:background="@drawable/flota_listtop"
     android:orientation="vertical" >
@@ -67,10 +67,7 @@
             android:id="@+id/edit_contact"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:focusable="false"
-            android:hint="請選擇緊急聯絡人"
-            android:onClick="contact"
-            android:text="" />
+            android:hint="請選擇緊急聯絡人" />
     </LinearLayout>
 
     <LinearLayout
@@ -94,8 +91,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="請輸入緊急聯絡人"
-            android:inputType="phone"
-            android:text="" />
+            android:inputType="phone" />
     </LinearLayout>
 
     <LinearLayout
