--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -24,7 +24,7 @@
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:orientation="vertical" >
