修正在不同手機上的UI 跑版問題

--- a/res/layout/general.xml
+++ b/res/layout/general.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical"
         android:text="一般報案"
         android:textColor="@android:color/white"
-        android:textSize="14pt" >
+        android:textSize="30sp" >
     </TextView>
 
     <LinearLayout
