--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical"
         android:text="@string/app_name"
         android:textColor="@android:color/white"
-        android:textSize="14pt" >
+        android:textSize="30sp" >
     </TextView>
 
     <LinearLayout
@@ -44,7 +44,7 @@
                 android:onClick="onClickGeneral"
                 android:text="一般報案"
                 android:textColor="@android:color/white"
-                android:textSize="14pt" />
+                android:textSize="30sp" />
 
             <View
                 android:layout_width="fill_parent"
@@ -66,7 +66,7 @@
                 android:onClick="setPersonalData"
                 android:text="個人資料"
                 android:textColor="@android:color/white"
-                android:textSize="14pt" />
+                android:textSize="30sp" />
 
             <View
                 android:layout_width="fill_parent"
