--- a/res/layout/personal_data.xml
+++ b/res/layout/personal_data.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="400dp"
+    android:layout_width="600px"
     android:layout_height="wrap_content"
     android:background="@drawable/flota_listtop"
     android:orientation="vertical" >
@@ -17,7 +17,7 @@
         android:singleLine="true"
         android:text="個人資料"
         android:textColor="@android:color/white"
-        android:textSize="14pt" >
+        android:textSize="30sp" >
     </TextView>
 
     <LinearLayout
@@ -34,7 +34,7 @@
             android:gravity="center"
             android:text="姓　　　名："
             android:textColor="@android:color/black"
-            android:textSize="14pt" />
+            android:textSize="30sp" />
 
         <EditText
             android:id="@+id/edit_name"
@@ -61,7 +61,7 @@
             android:gravity="center"
             android:text="聯絡人電話："
             android:textColor="@android:color/black"
-            android:textSize="14pt" />
+            android:textSize="30sp" />
 
         <EditText
             android:id="@+id/edit_contact_phone"
@@ -88,7 +88,7 @@
             android:background="@drawable/styple_button"
             android:text="儲　　存"
             android:textColor="#DDD"
-            android:textSize="14pt" />
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/btn_cancel"
@@ -99,7 +99,7 @@
             android:background="@drawable/styple_button"
             android:text="取　　消"
             android:textColor="#DDD"
-            android:textSize="14pt" />
+            android:textSize="30sp" />
     </LinearLayout>
 
 </LinearLayout>
