修改報案畫面為全螢幕

--- a/res/layout/general.xml
+++ b/res/layout/general.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/flota_listtop"
     android:orientation="vertical" >
 
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_weight="2"
         android:background="@drawable/futerbar"
         android:gravity="center"
         android:orientation="vertical"
@@ -19,38 +18,43 @@
     </TextView>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:layout_weight="6"
         android:orientation="horizontal" >
 
         <test.whell.WheelView
             android:id="@+id/join1"
-            android:layout_width="200px"
-            android:layout_height="200px"
-            android:layout_marginRight="5dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1" />
 
         <test.whell.WheelView
             android:id="@+id/join2"
-            android:layout_width="200px"
-            android:layout_height="200px"
-            android:layout_marginLeft="5dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:layout_weight="1"
+        android:gravity="center"
         android:orientation="horizontal" >
 
         <Button
             android:id="@+id/gengeralbutton"
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:background="@drawable/styple_button"
@@ -62,7 +66,7 @@
         <Button
             android:id="@+id/general"
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="@drawable/styple_button"
