fixed bug for user mobile no contact people

--- a/res/layout-port/personal_data.xml
+++ b/res/layout-port/personal_data.xml
@@ -79,6 +79,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:hint="搜尋"
         android:inputType="text" />
 
     <ListView
