--- a/res/layout-port/personal_data.xml
+++ b/res/layout-port/personal_data.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/flota_listtop"
     android:orientation="vertical" >
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/title"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="個人資料"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" >
+    </TextView>
 
     <LinearLayout
         android:id="@+id/content"
@@ -14,94 +26,92 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/futerbar"
             android:gravity="center"
+            android:text="使用者姓名："
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/edit_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:hint="請輸入姓名"
             android:lines="1"
             android:maxLines="1"
-            android:orientation="vertical"
             android:singleLine="true"
-            android:text="個人資料"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" >
-        </TextView>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:gravity="center"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="使用者姓名："
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/edit_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:hint="請輸入姓名"
-                android:lines="1"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:text=""
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="聯絡人電話："
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
-        </LinearLayout>
+            android:text=""
+            android:textSize="16sp" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/searchName"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:hint="搜尋"
-        android:inputType="text" />
+        android:background="@drawable/title" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:padding="3dp"
+            android:text="緊急聯絡人"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:text="1"
+            android:textColor="@android:color/white" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:padding="5dp" >
+
+        <EditText
+            android:id="@+id/searchName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/search_stroke"
+            android:hint="搜尋"
+            android:inputType="text"
+            android:paddingBottom="5dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:textColor="@android:color/black" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#75B3D0" />
 
     <ListView
         android:id="@+id/contact_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btn"
-        android:layout_below="@+id/searchName"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_height="250dp"
+        android:background="@android:color/white"
+        android:divider="#2DA7ED"
         android:transcriptMode="alwaysScroll" />
 
     <LinearLayout
         android:id="@+id/btn"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:orientation="horizontal" >
+        android:background="@color/attach_color"
+        android:orientation="horizontal"
+        android:padding="10dp" >
 
         <Button
             android:id="@+id/btn_submit"
@@ -113,17 +123,6 @@
             android:text="儲　　存"
             android:textColor="#DDD"
             android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/btn_cancel"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/styple_button"
-            android:text="取　　消"
-            android:textColor="#DDD"
-            android:textSize="20sp" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
