--- a/res/layout/people.xml
+++ b/res/layout/people.xml
@@ -3,16 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
+    android:background="#ffffff"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/contact_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/contact_phone"
         android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/contact_name"
-        android:layout_marginRight="10dp"
+        android:layout_alignParentTop="true"
         android:gravity="center"
         android:textColor="#ffffff"
         android:textSize="20sp" />
@@ -21,17 +20,23 @@
         android:id="@+id/contact_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/contact_id"
-        android:textColor="#ffffff"
+        android:gravity="center|center"
+        android:text="123"
+        android:textColor="@android:color/black"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/contact_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/contact_name"
-        android:layout_toRightOf="@+id/contact_id"
-        android:textColor="#ffffff"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/contact_name"
+        android:text="123"
+        android:textColor="@android:color/black"
         android:textSize="16sp" />
 
     <CheckBox
@@ -39,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:button="@drawable/cb_select"
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false" />
