--- a/res/layout-xlarge/main.xml
+++ b/res/layout-xlarge/main.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="80dp"
         android:background="@drawable/title"
         android:gravity="center"
         android:orientation="vertical"
@@ -20,7 +20,7 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="650dp"
         android:layout_below="@+id/title"
         android:layout_weight="1"
         android:scaleType="fitXY"
@@ -29,7 +29,7 @@
     <LinearLayout
         android:id="@+id/btn"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="200dp"
         android:layout_below="@+id/image"
         android:layout_marginTop="20dp"
         android:background="@android:color/white"
@@ -38,8 +38,8 @@
         <Button
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
             android:layout_weight="2"
             android:background="@drawable/button_blue"
             android:onClick="onClickGeneral"
@@ -50,17 +50,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="200dp"
         android:layout_alignParentBottom="true"
         android:background="@color/attach_color"
         android:gravity="center|center" >
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_weight="2"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
             android:background="@drawable/button_blue"
             android:onClick="setPersonalData"
             android:text="個人資料"
