--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -31,15 +31,15 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_below="@+id/image"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:background="@android:color/white"
         android:orientation="vertical" >
 
         <Button
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:layout_weight="2"
             android:background="@drawable/button_blue"
             android:onClick="onClickGeneral"
