hdpi size layout finish

--- a/res/layout/people.xml
+++ b/res/layout/people.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:layout_height="48dp"
     android:background="#ffffff"
     android:orientation="vertical" >
 
@@ -21,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/contact_id"
         android:gravity="center|center"
         android:text="123"
@@ -33,9 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="48dp"
         android:layout_toRightOf="@+id/contact_name"
-        android:text="123"
+        android:text="0912345678"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
 
@@ -44,6 +43,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:button="@drawable/cb_select"
         android:clickable="false"
         android:focusable="false"
