--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -10,7 +10,7 @@
 
     <style name="text_black_content">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#000000</item>
+	<item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="text_gray_content">
@@ -18,9 +18,9 @@
         <item name="android:textColor">#888889</item>
     </style>
 
-    <style name="button">
+    <style name="text_white_content">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#ffffff</item>
+	<item name="android:textColor">@android:color/white</item>
     </style>
 
 </resources>
