--- a/res/layout/people.xml
+++ b/res/layout/people.xml
@@ -1,42 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:background="#ffffff"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/contact_id"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:textColor="#ffffff"
-        android:textSize="20sp" />
+        android:orientation="vertical"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp" >
 
-    <TextView
-        android:id="@+id/contact_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@+id/contact_id"
-        android:gravity="center|center"
-        android:text="123"
-        android:textColor="@android:color/black"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/contact_name"
+            style="@style/text_black_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:text="123" />
 
-    <TextView
-        android:id="@+id/contact_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="48dp"
-        android:layout_toRightOf="@+id/contact_name"
-        android:text="0912345678"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        <TextView
+            android:id="@+id/contact_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="48dp"
+            android:text="0912345678"
+            android:textColor="#595757"
+            android:textSize="16sp" />
+    </LinearLayout>
 
     <CheckBox
         android:id="@+id/select"
@@ -44,11 +37,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:button="@drawable/cb_select"
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1pt"
+        android:layout_alignParentBottom="true"
+        android:background="#2EA7E0" />
 
 </RelativeLayout>
