--- a/res/layout-port/personal_data.xml
+++ b/res/layout-port/personal_data.xml
@@ -91,7 +91,7 @@
         android:layout_height="1dp"
         android:background="#75B3D0" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
@@ -99,16 +99,16 @@
         <ListView
             android:id="@+id/contact_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="4"
             android:background="@android:color/white"
             android:divider="#2DA7ED"
             android:transcriptMode="alwaysScroll" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:background="@color/attach_color"
             android:padding="10dp" >
 
@@ -123,6 +123,6 @@
                 android:gravity="center"
                 android:text="確認" />
         </RelativeLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
