修正個人資料使用者姓名輸入框文字應該置中

--- a/res/layout-port/personal_data.xml
+++ b/res/layout-port/personal_data.xml
@@ -34,6 +34,7 @@
             android:cursorVisible="false"
             android:drawablePadding="10dp"
             android:drawableRight="@drawable/pen"
+            android:gravity="center"
             android:hint="請輸入使用者姓名"
             android:textSize="24sp" />
     </RelativeLayout>
