--- a/res/drawable/wheel_bg.xml
+++ b/res/drawable/wheel_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- 
+<!--
     Android Wheel Control.
     http://android-devblog.blogspot.com/2010/05/wheel-ui-contol.html
    
@@ -18,25 +18,16 @@
     limitations under the License.
 -->
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-	<item>
-		<shape android:shape="rectangle">
-			<gradient
-				android:startColor="#333"
-				android:centerColor="#DDD"
-				android:endColor="#333"
-				android:angle="90" />
-				
-				<stroke android:width="1dp" android:color="#FF333333" />
-		</shape>
-	</item>
-	<item android:left="4dp" android:right="4dp" android:top="1dp" android:bottom="1dp">
-		<shape android:shape="rectangle">
-			<gradient
-				android:startColor="#AAA"
-				android:centerColor="#FFF"
-				android:endColor="#AAA"
-				android:angle="90" />
-		</shape>
-	</item>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item>
+        <shape android:shape="rectangle" >
+            <gradient
+                android:angle="90"
+                android:centerColor="#EFEFEF"
+                android:endColor="#EFEFEF"
+                android:startColor="#EFEFEF" />
+        </shape>
+    </item>
+
 </layer-list>
