--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@android:color/white"
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_below="@+id/image"
+        android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
         android:background="@android:color/white"
         android:orientation="vertical" >
@@ -38,6 +39,7 @@
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_weight="2"
@@ -58,9 +60,9 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_weight="2"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
+            android:layout_weight="2"
             android:background="@drawable/button_blue"
             android:onClick="setPersonalData"
             android:text="個人資料"
@@ -68,4 +70,4 @@
             android:textSize="30sp" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
