--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -2,6 +2,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="title">
+        <item name="android:background">@drawable/title</item>
+        <item name="android:gravity">center</item>
         <item name="android:paddingTop">16sp</item>
         <item name="android:paddingBottom">16sp</item>
         <item name="android:textSize">16sp</item>
