--- a/res/layout/general.xml
+++ b/res/layout/general.xml
@@ -6,14 +6,11 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/title"
+        style="@style/title"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/title"
-        android:gravity="center"
-        android:text="一般報案"
-        android:textColor="@android:color/white"
-        android:textSize="20sp" >
+        android:text="一般報案" >
     </TextView>
 
     <TextView
