--- a/res/layout/general.xml
+++ b/res/layout/general.xml
@@ -9,108 +9,6 @@
         style="@style/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/title"
-        android:text="一般報案" >
-    </TextView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="請選擇報案內容"
-        android:textColor="@android:color/black"
-        android:textSize="12sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:orientation="horizontal" >
-
-        <test.whell.WheelView
-            android:id="@+id/join1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1" />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="你報案的內容："
-        android:textColor="@android:color/black"
-        android:textSize="12sp" />
-
-    <EditText
-        android:id="@+id/inputText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:padding="4dp"
-        android:textColor="@android:color/black"
-        android:textSize="16dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="4dp"
-        android:background="@color/attach_color"
-        android:gravity="center"
-        android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/attach_color"
-            android:gravity="center"
-            android:orientation="horizontal" >
-
-            <Button
-                android:id="@+id/gengeralbutton"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_blue"
-                android:onClick="submit"
-                android:text="確認送出"
-                android:textColor="@android:color/white"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/general"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_blue"
-                android:onClick="clock"
-                android:text="取消報案"
-                android:textColor="@android:color/white"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="本系統使用簡訊報案(提醒使用簡訊)"
-            android:textColor="@android:color/white"
-            android:textSize="12dp" />
-    </LinearLayout>
+        android:text="一般報案" />
 
 </LinearLayout>
