--- a/res/layout/general.xml
+++ b/res/layout/general.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical" >
 
     <TextView
@@ -10,5 +12,92 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="一般報案" />
+
+    <TextView
+        style="@style/text_black_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:text="請選擇災情：" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/wheel_bg_color"
+        android:orientation="vertical"
+        android:padding="6dp" >
+
+        <test.whell.WheelView
+            android:id="@+id/join1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="3" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:hint="點我增加分類"
+            android:inputType="text"
+            android:maxLength="6" />
+    </LinearLayout>
+
+    <TextView
+        style="@style/text_black_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="25dp"
+        android:text="您即將傳送的報案內容如下：" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#EEEFEF" >
+
+        <EditText
+            android:id="@+id/report_data"
+            style="@style/text_black_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="center_horizontal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_margin="25dp" >
+
+        <Button
+            style="@style/text_white_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/button_blue"
+            android:text="確定送出" />
+
+        <Button
+            style="@style/text_white_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/button_blue"
+            android:text="取消報案" />
+    </LinearLayout>
+
+    <TextView
+        style="@style/text_black_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="本系統以簡訊報案（提醒使用簡訊）" />
 
 </LinearLayout>
