--- a/res/layout/general.xml
+++ b/res/layout/general.xml
@@ -69,8 +69,9 @@
             style="@style/text_black_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="5dp"
-            android:gravity="center_horizontal" />
+            android:gravity="center" />
     </LinearLayout>
 
     <LinearLayout
