一般報案頁面的按鈕之間增加間距

--- a/res/layout/general.xml
+++ b/res/layout/general.xml
@@ -85,6 +85,7 @@
             style="@style/text_white_content"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
             android:layout_weight="1"
             android:background="@drawable/button_blue"
             android:onClick="submit"
@@ -94,6 +95,8 @@
             style="@style/text_white_content"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_weight="1"
             android:background="@drawable/button_blue"
             android:onClick="clock"
